fix text info appearing too high

--- a/css/master-template.css/RecommendedShows.aspx.less
+++ b/css/master-template.css/RecommendedShows.aspx.less
@@ -131,6 +131,9 @@ video#bgvid {
 .dataItem.simulateHover .itemsDataContainer {
     height          : 33% !important;
     background-color: transparent;
+    @media @mobile {
+        top: initial;
+    }
 }
 
 .dataItem .itemsDateRange {
